# learn-wasm

dynamic-dependency-resolution-example/: Cargo.toml
dynamic-dependency-resolution-example/src/: main.rs
first-glitch-art/: Cargo.toml
first-glitch-art/src/: bindings.rs  lib.rs
greet/: Cargo.toml
greet-user/: Cargo.toml
greet-user/src/: main.rs
greet/src/: bindings.rs  lib.rs
greet/wit/: hello-world.wit  world.wit
hello-wasi-http/: Cargo.toml
hello-wasi-http/src/: bindings.rs  lib.rs
hello-world-impl/: Cargo.toml  composed-hello-world-impl.wasm
hello-world-impl/src/: bindings.rs  lib.rs
hello-world-with-spin/: spin.toml
hello-world-with-spin/echo/: Cargo.toml
hello-world-with-spin/echo/src/: lib.rs
png-glitch-cli/: Cargo.toml  first-glitch.wasm
png-glitch-cli/src/: bindings.rs  main.rs
png-glitch-cli/wit/: glitch-art.wasm  world.wit
