[package]
name = "first-glitch-art"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "sunaga0709:first-glitch-art"
target = "sunaga0709:glitch-art/png-glitcher@0.1.0"

[package.metadata.component.dependencies]
