[package]
name = "hello-wasi-http"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "sunaga0709:hello-wasi-http"
target = "wasi:http/proxy@0.2.0"

[package.metadata.component.dependencies]
