[package]
name = "hello-world-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
ferris-says = "0.3.1"
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component.target]
path = "../greet/wit"
world = "hello-world"

[package.metadata.component.dependencies]
