[package]
name = "echo"
authors = ["Takashi Sunaga <84524584+Sunaga0709@users.noreply.github.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
spin-sdk = "3.1.0"

[workspace]
